[package]
edition = "2021"
name = "circleci-hook-server"
version = "0.0.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.0-rc"
circleci-hook-app = {path = "./app"}
futures = "*"
opentelemetry = {version = "0.18.0", features = ["rt-tokio"]}
opentelemetry-otlp = {version = "0.11.0", features = ["tonic", "tls", "tls-roots"]}
opentelemetry-semantic-conventions = "0.10.0"
serde_json = "1.0"
tokio = {version = "1.23", features = ["full"]}
tonic = {version = "0.8.1", features = ["tls"]}
tower = "*"
tower-http = {version = "*", features = ["trace"]}
tower-service = "0.3"
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
url = "2.2.0"
uuid = { version = "1.1.2", features = ["serde"] }

[workspace]
members = ["app"]
