[package]
edition = "2021"
name = "circleci-hook-app"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
hex = "*"
hmac = "*"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha2 = "*"
subtle = "*"
uuid = {version = "1.1", features = ["serde", "v4"]}
